// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer renders a snapshot with focus trap 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="drawer_6"
    class="ds-c-drawer"
    role="dialog"
  >
    <div
      class="ds-c-drawer__window"
    >
      <div
        class="ds-c-drawer__header"
      >
        <h3
          class="ds-c-drawer__header-heading"
          id="drawer_6"
          tabindex="0"
        >
          Drawer title
        </h3>
        <button
          aria-label="Close help drawer"
          class="ds-c-button ds-c-button--main ds-c-button--on-light ds-c-button--small ds-c-button--outline ds-c-drawer__close-button ds-u-fill--white"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="ds-c-drawer__body"
      >
        <p>
          content
        </p>
      </div>
      <div
        class="ds-c-drawer__footer"
      >
        <h4
          class="ds-c-drawer__footer-title"
        >
          Footer title
        </h4>
        <div
          class="ds-c-drawer__footer-body"
        >
          <div>
            <p>
              Some footer content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer renders a snapshot without focus trap 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="drawer_5"
    class="ds-c-drawer"
    role="dialog"
  >
    <div
      class="ds-c-drawer__window"
    >
      <div
        class="ds-c-drawer__header"
      >
        <h3
          class="ds-c-drawer__header-heading"
          id="drawer_5"
          tabindex="0"
        >
          Drawer title
        </h3>
        <button
          aria-label="Close help drawer"
          class="ds-c-button ds-c-button--main ds-c-button--on-light ds-c-button--small ds-c-button--outline ds-c-drawer__close-button ds-u-fill--white"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="ds-c-drawer__body"
      >
        <p>
          content
        </p>
      </div>
      <div
        class="ds-c-drawer__footer"
      >
        <h4
          class="ds-c-drawer__footer-title"
        >
          Footer title
        </h4>
        <div
          class="ds-c-drawer__footer-body"
        >
          <div>
            <p>
              Some footer content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
